--- a/web/styles.css
+++ b/web/styles.css
@@ -1,14 +1,19 @@
 body{
     background : #333;
     color : #fff;
-    font-size:35px;
-    width: calc( var(--page-box) + 500px )
+    font-size:18px;
+    --sidebar-width:250px;
+    width: calc( var(--page-box) * var(--page-zoom) + var(--sidebar-width) );
+    margin-right: var(--sidebar-width);
 }
 
-
-#pages-container{
-    margin-right: 500px;
+.width100{
+    width: 100%;
 }
+
+/* #pages-container{
+    margin-right: var(--sidebar-width);
+} */
 
 .page-block{
     display:inline-block;
@@ -109,17 +114,31 @@ a.saveBtn {
     right: 0;
     bottom : 0;
     /* top:0; */
-    width:500px;
+    width:var(--sidebar-width);
+    font-size: 1em;
 }
-#console{
+
+#sidebar input,
+#sidebar textarea
+{
+    font-size: 1em;
+}
+
+#sidebar textarea{
+    width: 100%;
+    height:200px;
+
+}
+#sidebar #console{
     /* position: fixed;
     right: 0;
     bottom : 0; */
     font : var(--frame-font);
+    font-size : calc( var(--frame-fontSize) * var(--page-zoom) * 1px );
     color: #000;
     z-index : 400;
-    width:500px;
-    height:300px;
+    width:var(--sidebar-width);
+    height:200px;
     background: #ccc;
 }
 
@@ -135,6 +154,7 @@ a.saveBtn {
     text-align: center;
     color: #000;
     text-decoration: none;
+    font-size: 1.5em;
 }
 
 #sidebar .btn:hover{
@@ -154,4 +174,93 @@ a.saveBtn {
     opacity: 0.3 !important;
     filter: grayscale(100);
     cursor: default !important;
+}
+
+
+#SVGTree{
+    background:rgba(255,255,255,0.7);
+    padding:5px;
+    height:400px;
+    overflow:auto;
+
+}
+#SVGTree .tagItem{
+    
+}
+#SVGTree .tagItem > .content::after{
+    content: "<"attr(data-tag)"/>";
+    color:#14325f;
+}
+
+#SVGTree ul,
+#SVGTree li{
+    list-style:none;
+    padding:0;
+    margin:0;
+}
+
+#SVGTree .nodeItem  {
+    --item-left:20px;
+    padding-left: var(--item-left);
+    position:relative; 
+}
+
+#SVGTree .nodeItem .toggler{
+    --box-size:calc(  var(--item-left) - 10px );
+    color:#333;
+    position:absolute;
+    left:0;
+    display:'block';
+    border:1px solid;
+    font-size: var(--box-size);
+    line-height: var(--box-size);
+    height: var(--box-size);
+    width: var(--box-size);
+    text-align:center;
+    cursor:pointer;
+}
+
+
+#SVGTree .nodeItem .toggler:after{
+    content:"+";
+}
+#SVGTree .nodeItem.opened > .toggler:after{
+    content:"-";
+}
+
+#SVGTree .nodeItem:not(.opened) > .children{
+    display:none;
+}
+
+#SVGTree .textItem{
+    color:#333;
+}
+
+#SVGTree .textItem > .content::after{
+    content:attr(data-content);
+    color:#333;
+}
+
+#SVGTree .commentItem{
+    color:rgb(16, 58, 35);
+}
+
+#SVGTree .commentItem > .content::after{
+    content:"<!--"attr(data-content)"-->";
+    color:rgb(16, 58, 35);
+}
+
+#SVGTree .nodeItem.selected > .content{
+    background:rgba(13, 68, 95, 0.54);
+    color:#fff;    
+}
+
+#SVGTree .nodeItem.hasSelected > .content{
+    background:rgba(13, 68, 95, 0.18);
+    color:#fff;    
+}
+
+#footer{
+    
+    font-size : calc( var(--frame-fontSize) / var(--page-zoom) * 1px);
 }
