--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,3 +1,26 @@
+@font-face {
+    font-family: 'Font Awesome 5 Brands';
+    font-style: normal;
+    font-weight: 400;
+    font-display: block;
+    src: url("../webfonts/fa-brands-400.eot");
+    src: url("../webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-brands-400.woff2") format("woff2"), url("../webfonts/fa-brands-400.woff") format("woff"), url("../webfonts/fa-brands-400.ttf") format("truetype"), url("../webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
+@font-face {
+    font-family: 'Font Awesome 5 Free';
+    font-style: normal;
+    font-weight: 400;
+    font-display: block;
+    src: url("../webfonts/fa-regular-400.eot");
+    src: url("../webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-regular-400.woff2") format("woff2"), url("../webfonts/fa-regular-400.woff") format("woff"), url("../webfonts/fa-regular-400.ttf") format("truetype"), url("../webfonts/fa-regular-400.svg#fontawesome") format("svg"); }
+@font-face {
+font-family: 'Font Awesome 5 Free';
+font-style: normal;
+font-weight: 900;
+font-display: block;
+src: url("../webfonts/fa-solid-900.eot");
+src: url("../webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.woff") format("woff"), url("../webfonts/fa-solid-900.ttf") format("truetype"), url("../webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
+
+
 body{
     background : #333;
     color : #fff;
@@ -150,7 +173,9 @@ a.saveBtn {
     background: #ccc;
 }
 
-#sidebar .btn{
+ .btn{
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 400;
     display: inline-block;
     width:1em;
     height:1em;
@@ -164,8 +189,14 @@ a.saveBtn {
     text-decoration: none;
     font-size: 1.5em;
 }
+.btn[data-title]::before{
+    font-family: 'Font Awesome 5 Free';
+    content: attr(data-title); 
+    content: '\f2f1';
+    font-weight: 400;
+}
 
-#sidebar .btn:hover{
+ .btn:hover{
     opacity: 0.8;
 
 }
